--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav>
         <ul>
           <li>
-            <img src="./images/Logo.jpg" alt="logo" width="115" height="24" />
+            <img src="./images/logo.jpg" alt="logo" width="115" height="24" />
           </li>
           <li><h4>Studio</h4></li>
           <li><h4>Portfolio</h4></li>
@@ -84,28 +84,18 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/img-card1.jpg"
-              alt="Mark"
-              width="264"
-              height="260"
-            />
+            <img src="./images/card1.jpg" alt="Mark" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/img-card2.jpg"
-              alt="Tom"
-              width="264"
-              height="260"
-            />
+            <img src="./images/card2.jpg" alt="Tom" width="264" height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/img-card3.jpg"
+              src="./images/card3.jpg"
               alt="Camila"
               width="264"
               height="260"
@@ -115,7 +105,7 @@
           </li>
           <li>
             <img
-              src="./images/img-card4.jpg"
+              src="./images/card4.jpg"
               alt="Daniel"
               width="264"
               height="260"
@@ -127,7 +117,7 @@
       </section>
     </main>
     <footer>
-      <img src="./images/Logo.jpg" alt="logo" width="115" height="24" />
+      <img src="./images/logo.jpg" alt="logo" width="115" height="24" />
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
