--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav>
         <ul>
           <li>
-            <img src="./images/logo.jpg" alt="logo" width="115" height="24" />
+            <a href="./index.html">WebStudio</a>
           </li>
           <li><h4>Studio</h4></li>
           <li><h4>Portfolio</h4></li>
@@ -117,7 +117,7 @@
       </section>
     </main>
     <footer>
-      <img src="./images/logo.jpg" alt="logo" width="115" height="24" />
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
