--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
   <body>
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>
-            <a href="./index.html">WebStudio</a>
-          </li>
-          <li><h4>Studio</h4></li>
-          <li><h4>Portfolio</h4></li>
-          <li><h4>Contacts</h4></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./index.html">Portfolio</a></li>
+          <li><a href="./index.html">Contacts</a></li>
         </ul>
       </nav>
-      <div class="contacts">
+      <address>
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
           </li>
         </ul>
-      </div>
+      </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button>Order Service</button>
       <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <section>
+        <h2>Our Philosophy</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -66,19 +68,32 @@
       </section>
       <section>
         <h2>What Are We Doing</h2>
-        <img src="./images/img1.jpg" alt="computer" width="360" height="300" />
-        <img
-          src="./images/img2.jpg"
-          alt="smartphone"
-          width="360"
-          height="300"
-        />
-        <img
-          src="./images/img3.jpg"
-          alt="connection"
-          width="360"
-          height="300"
-        />
+        <ul>
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="computer"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+        <li>
+          <img
+            src="./images/img2.jpg"
+            alt="smartphone"
+            width="360"
+            height="300"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/img3.jpg"
+            alt="connection"
+            width="360"
+            height="300"
+          />
+        </li>
       </section>
       <section>
         <h2>Our Team</h2>
