--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </ul>
       </section>
       <section>
-        <h2>What Are We Doing</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
@@ -77,23 +77,23 @@
               height="300"
             />
           </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="smartphone"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              alt="connection"
+              width="360"
+              height="300"
+            />
+          </li>
         </ul>
-        <li>
-          <img
-            src="./images/img2.jpg"
-            alt="smartphone"
-            width="360"
-            height="300"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/img3.jpg"
-            alt="connection"
-            width="360"
-            height="300"
-          />
-        </li>
       </section>
       <section>
         <h2>Our Team</h2>
